# LazyWriter

./: .gitignore  CMakeLists.txt  README.md  main.py  main.spec  pyproject.toml  requirements.txt  style.css  window.py  writer.py
include/: KeyboardSimulator.hpp  Window.hpp  lorem.hpp  param.hpp  writer.hpp
old/: CMakeLists.txt
old/include/: KeyboardSimulator.hpp  lorem.hpp
old/src/: KeyboardSimulator.cpp  Window.cpp  main.cpp
src/: KeyboardSimulator.cpp  Window.cpp  main.cpp  writer.cpp
src/lazy_writer_raphael_senellart/: main.py  window.py  writer.py
